feat: fix sonarq code bugs